--- a/main.css
+++ b/main.css
@@ -166,3 +166,115 @@ header
 
 }
 
+.products
+{
+
+    width: 100%;
+    height: 100vh;
+    background-color: #F2F2F2;
+
+}
+
+.slider
+{
+
+    display: block;
+    height: 293px;
+    width: 350px;
+    margin: auto;
+    margin-top: -600px;
+    position: relative;
+
+}
+
+.slider li 
+{
+
+    list-style: none;
+    position: absolute;
+
+}
+
+.slider img
+{
+
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    vertical-align: top;
+    opacity: 0;
+    visibility: hidden;
+
+}
+
+.orange 
+{
+
+    padding-top: 35%;
+    padding-left: 35%;
+
+}
+
+.woman
+{
+
+    padding-top: 35%;
+    padding-left: 50%;
+
+}
+
+.slider input 
+{
+
+    display: none;
+
+}
+
+.slider li input:checked ~ img 
+{
+
+    opacity: 1;
+    visibility: visible;
+    z-index: 10;
+
+}
+
+.slider label 
+{
+
+    background-color: #000;
+    bottom: 10px;
+    cursor: pointer;
+    display: block;
+    height: 10px;
+    position: absolute;
+    width: 10px;
+    z-index: 10;
+
+}
+
+.slider li:nth-child(1) label 
+{
+
+    left: 30px;
+    bottom: 90px
+    
+
+}
+
+.slider li:nth-child(2) label 
+{
+
+    left: 90px;
+    bottom: -60px
+    
+
+}
+
+.slider li:nth-child(3) label 
+{
+
+    left: 60px;
+    bottom: 20px;
+
+}
